--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -3,12 +3,14 @@
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .dashboard-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  border: none;
 }
 
 .navbar {
@@ -41,8 +43,8 @@
 
 .nameLogo {
   display: flex;
-  padding-top: 20px;
   justify-content: start;
+  align-items: center;
 }
 
 .logo {
